--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,16 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+
+h5 {
+  color: #000000;
+  font-family: fantasy,sans-serif;
+}
+
+p{
+  font-size: 15px;}
+
+span{
+  color: #738f93;
 }
